@startuml
!theme spacelab

entity "users" as users {
  + id : SERIAL [PK]
  username : VARCHAR(100) [UNIQUE, NOT NULL]
  password_hash : TEXT [NOT NULL]
  created_at : TIMESTAMP [DEFAULT CURRENT_TIMESTAMP]
  updated_at : TIMESTAMP WITH TIME ZONE DEFAULT
}

entity "roles" as roles {
  + id : SERIAL [PK]
  name : VARCHAR(50) [UNIQUE, NOT NULL]
  description : TEXT
}

entity "user_roles" as user_roles {
  + user_id : INT [PK, FK -> users.id]
  + role_id : INT [PK, FK -> roles.id]
}

users ||--o{ user_roles : "has roles"
roles ||--o{ user_roles : "belongs to users"

entity "permissions" as permissions {
  + id : SERIAL [PK]
  name : VARCHAR(100) [UNIQUE, NOT NULL]
}

entity "role_permissions" as role_permissions {
  + role_id : INT [PK, FK -> roles.id]
  + permission_id : INT [PK, FK -> permissions.id]
}

roles ||--o{ role_permissions : "has permissions"
permissions ||--o{ role_permissions : "granted to roles"

@enduml
